--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<img src="le-wagon-logo.png">
-	<h1>Coming soon... Le Wagon</h1>
-
+	<div id="container">
+		<img src="le-wagon-logo.png" id="logo">
+		<h1>Coming soon... Le Wagon</h1>
+	</div>
 </body>
 </html>
